quic/s2n-quic-core/src/recovery/bbr/snapshots/quic__s2n-quic-core__src__recovery__bbr__probe_rtt__events__check_probe_rtt_enter_probe_rtt.snap
---
source: quic/s2n-quic-core/src/recovery/bbr/probe_rtt.rs
expression: ""
---
BbrStateChanged { path_id: 0, state: ProbeRtt }
